...
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="HomeViewController" id="BYZ-38-t0r" customClass="HomeViewController" customModule="GoContact" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Contact" id="Guq-Jf-9G3">
                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="add" id="I3Q-qq-sSN">
                            <color key="tintColor" red="0.25490196079999999" green="0.60784313729999995" blue="0.1137254902" alpha="1" colorSpace="calibratedRGB"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DaR-Ba-ATL">
                                                        <rect key="frame" x="5" y="5" width="76" height="68.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="contactDetailMessageButton" label="messageButton"/>
                                                        <state key="normal" image="message_button"/>
                                                        <connections>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d7C-Jd-dYB">
                                                        <rect key="frame" x="5" y="5" width="76" height="68.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="contactDetailCallButton" label="callButton"/>
                                                        <state key="normal" image="call_button"/>
                                                        <connections>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4YQ-fj-aWe">
                                                        <rect key="frame" x="5" y="5" width="76" height="68.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="contactDetailMailButton" label="mailButton"/>
                                                        <state key="normal" image="email_button"/>
                                                        <connections>
...
                                                        </connections>
                                                    </button>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m02-Bo-F0o">
                                                        <rect key="frame" x="8" y="78.5" width="70" height="20.5"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eSb-Fa-HXX">
                                                        <rect key="frame" x="5" y="5" width="76" height="68.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="contactDetailFavouriteButton" label="favouriteButton"/>
                                                        <state key="normal" image="favourite_button"/>
                                                        <connections>
...
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mobile" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TKE-eB-MLE">
                                                <rect key="frame" x="20" y="10" width="105.5" height="40"/>
                                                <constraints>
...
                        <viewLayoutGuide key="safeArea" id="3eq-ny-p0W"/>
                    </view>
                    <navigationItem key="navigationItem" title="Contact Detail" id="h3Z-Gs-hL1">
                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="3at-Yy-ZjG">
                            <color key="tintColor" red="0.38431372549999998" green="0.69019607839999997" blue="0.047058823530000002" alpha="1" colorSpace="calibratedRGB"/>
...
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OWt-4r-54d">
                                            <rect key="frame" x="20" y="20" width="53" height="33"/>
                                            <accessibility key="accessibilityConfiguration" identifier="EditContactcancelButton" label="cancelButton"/>
                                            <constraints>
                                                <constraint firstAttribute="width" constant="53" id="8en-u4-iID"/>
...
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8QR-a7-iRh">
                                            <rect key="frame" x="348" y="20" width="46" height="35"/>
                                            <accessibility key="accessibilityConfiguration" identifier="EditContactDoneButton" label="doneButton"/>
                                            <constraints>
                                                <constraint firstAttribute="width" constant="46" id="HlL-Ty-9Uv"/>
...
